# map_reduce

./: README.md  add_seven.py  loguru_demo.py  pyproject.toml
chap2/: fizz_buzz.py  order_multiprocessing.py  phone_numbers.py  phone_numbers_map.py  thankunext.py  url_to_html.py  village_simulation.py  who_is_the_author.py  wikipedia_api.py
chap2/author_a/: poem_1.txt  poem_10.txt  poem_2.txt  poem_3.txt  poem_4.txt  poem_5.txt  poem_6.txt  poem_7.txt  poem_8.txt  poem_9.txt
chap2/author_b/: poem_1.txt  poem_10.txt  poem_2.txt  poem_3.txt  poem_4.txt  poem_5.txt  poem_6.txt  poem_7.txt  poem_8.txt  poem_9.txt
chap5/: reduce.py
chap6/: filter_parallel_reduce.py  frequencies_parallell_reduce.py  lazymap.py  lazymap_chucksize.py  parallel_reduce.py  starmap_example.py  variations_parallel_map.py
chap7-hadoop/: mapper.py  reducer.py
