[tool.poetry]
name = "map-reduce"
version = "0.1.0"
description = ""
authors = ["levyvix <levy.vix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.1.1"
requests = "^2.31.0"
pathos = "^0.3.2"
networkx = "^3.2.1"
toolz = "^0.12.1"
loguru = "^0.7.2"
pyspark = "^3.5.1"
ipython = "^8.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
